Equation work. changed wording in form to avoid wrapping

--- a/css/site.css
+++ b/css/site.css
@@ -9,7 +9,9 @@
     display: none;
 }
 
-
+.resultsText{
+    color: var(--primary-color);
+}
 
 
 /* === Google Fonts === */
